# electrodynamics-simulation

./: CMakeLists.txt  README.md
include/glad/: glad.h
lib/core/math/: CMakeLists.txt
lib/core/math/include/: vector3.h
lib/core/math/src/: vector3.cpp
lib/core/math/tests/: test_vector3.cpp
lib/core/simulation/: CMakeLists.txt
lib/core/simulation/include/: particle.h
src/: main.cpp
